@@ -12,6 +12,27 @@
 
 
 /**
+ * Returns number of cached images inside cache directory
+ *
+ * @since 0.2
+ * @return integer number of images inside cache directory, or -1 if cache dir can't be read
+ */
+function scorerender_get_num_of_images ()
+{
+	global $sr_options;
+
+	if (false === ($handle = opendir ($sr_options['CACHE_DIR']))) return -1;
+
+	$count = 0;
+	while (false !== ($file = readdir ($handle)))
+		if (preg_match (REGEX_CACHE_IMAGE, $file)) $count++;
+
+	closedir ($handle);
+	return $count;
+}
+
+
+/**
  * Remove all cached images in cache directory
  *
  * @since 0.2
@@ -20,22 +41,16 @@ function scorerender_remove_cache ()
 {
 	global $sr_options;
 
-	// extra guard, doesn't hurt
-	if (!is_dir      ($sr_options['CACHE_DIR']) ||
-	    !is_readable ($sr_options['CACHE_DIR']) ||
-	    !is_writable ($sr_options['CACHE_DIR']))
-		return;
+	if (false === ($handle = opendir ($sr_options['CACHE_DIR']))) return;
 
-	if ($handle = opendir ($sr_options['CACHE_DIR']))
+	while (false !== ($file = readdir ($handle)))
 	{
-		while (false !== ($file = readdir ($handle)))
-		{
-			// FIXME: how to decide if some image is generated by plugin?
-			if (preg_match (REGEX_CACHE_IMAGE, $file))
-				unlink ($sr_options['CACHE_DIR'] . DIRECTORY_SEPARATOR . $file);
-		}
-		closedir ($handle);
+		// FIXME: how to decide if some image is generated by plugin?
+		if (preg_match (REGEX_CACHE_IMAGE, $file))
+			@unlink ($sr_options['CACHE_DIR'] . DIRECTORY_SEPARATOR . $file);
 	}
+	closedir ($handle);
+
 	return;
 }
 
@@ -100,9 +115,9 @@ function scorerender_update_options ()
 	transform_paths ($newopt, TRUE);
 	$errmsgs = array ();
 
-	$messages = array
+	$sr_adm_msgs = array
 	(
-		'temp_dir_not_writable'    => array ('level' => MSG_WARNING, 'content' => __('Temporary directory is NOT writable! Will fall back to system default setting.')),
+		'temp_dir_not_writable'    => array ('level' => MSG_WARNING, 'content' => __('Temporary directory is NOT writable! Will fall back to system default setting.', TEXTDOMAIN)),
 		'cache_dir_undefined'      => array ('level' => MSG_FATAL  , 'content' => __('Cache directory is NOT defined! Image can not be placed inside appropriate directory. The plugin will stop working.', TEXTDOMAIN)),
 		'cache_dir_not_writable'   => array ('level' => MSG_FATAL  , 'content' => __('Cache directory is NOT writable! Image can not be placed inside appropriate directory. The plugin will stop working.', TEXTDOMAIN)),
 		'cache_url_undefined'      => array ('level' => MSG_FATAL  , 'content' => __('Cache URL is NOT defined! The plugin will stop working.', TEXTDOMAIN)),
@@ -201,10 +216,10 @@ function scorerender_update_options ()
 	{
 		foreach (array_values ($errmsgs) as $m)
 		{
-			if ($messages[$m]['level'] == MSG_WARNING)
-				echo '<div id="scorerender-error-' . $messages[$m] . '" class="updated fade-800000"><p><strong>' . sprintf (__('WARNING: %s', TEXTDOMAIN), $messages[$m]['content']) . "</strong></p></div>\n";
-			elseif ($messages[$m]['level'] == MSG_FATAL)
-				echo '<div id="scorerender-error-' . $messages[$m] . '" class="updated" style="background-color: #800000; color: white;"><p><strong>' . sprintf (__('ERROR: %s', TEXTDOMAIN), $messages[$m]['content']) . "</strong></p></div>\n";
+			if ($sr_adm_msgs[$m]['level'] == MSG_WARNING)
+				echo '<div id="scorerender-error-' . $sr_adm_msgs[$m] . '" class="updated fade-800000"><p><strong>' . sprintf (__('WARNING: %s', TEXTDOMAIN), $sr_adm_msgs[$m]['content']) . "</strong></p></div>\n";
+			elseif ($sr_adm_msgs[$m]['level'] == MSG_FATAL)
+				echo '<div id="scorerender-error-' . $sr_adm_msgs[$m] . '" class="updated" style="background-color: #800000; color: white;"><p><strong>' . sprintf (__('ERROR: %s', TEXTDOMAIN), $sr_adm_msgs[$m]['content']) . "</strong></p></div>\n";
 		}
 	}
 	else
@@ -254,7 +269,7 @@ function scorerender_admin_section_path ()
 <tr valign="top">
 <th scope="row"><label for="temp_dir"><?php _e('Temporary directory:', TEXTDOMAIN) ?></label></th>
 <td>
-<input name="ScoreRender[TEMP_DIR]" type="text" id="temp_dir" value="<?php echo $sr_options['TEMP_DIR']; ?>" size="60" class="regular-text code" />
+<input name="ScoreRender[TEMP_DIR]" type="text" id="temp_dir" value="<?php echo $sr_options['TEMP_DIR']; ?>" class="regular-text code" />
 <div class="setting-description"><?php _e('Must be writable and ideally <strong>NOT</strong> accessible from web. System default will be used if left blank.', TEXTDOMAIN) ?></div>
 </td>
 </tr>
@@ -262,7 +277,7 @@ function scorerender_admin_section_path ()
 <tr valign="top">
 <th scope="row"><label for="cache_dir"><?php _e('Image cache directory:', TEXTDOMAIN) ?></label></th>
 <td>
-<input name="ScoreRender[CACHE_DIR]" type="text" id="cache_dir" value="<?php echo $sr_options['CACHE_DIR']; ?>" size="60" class="regular-text code" />
+<input name="ScoreRender[CACHE_DIR]" type="text" id="cache_dir" value="<?php echo $sr_options['CACHE_DIR']; ?>" class="regular-text code" />
 <div class="setting-description"><?php _e('Must be writable and accessible from web.', TEXTDOMAIN) ?></div>
 </td>
 </tr>
@@ -270,7 +285,7 @@ function scorerender_admin_section_path ()
 <tr valign="top">
 <th scope="row"><label for="cache_url"><?php _e('Image cache URL:', TEXTDOMAIN) ?></label></th>
 <td>
-<input name="ScoreRender[CACHE_URL]" type="text" id="cache_url" value="<?php echo $sr_options['CACHE_URL']; ?>" size="60" class="regular-text code" /><br />
+<input name="ScoreRender[CACHE_URL]" type="text" id="cache_url" value="<?php echo $sr_options['CACHE_URL']; ?>" class="regular-text code" /><br />
 <div class="setting-description"><?php _e('Must correspond to the image cache directory above.', TEXTDOMAIN) ?></div>
 </td>
 </tr>
@@ -298,34 +313,34 @@ function scorerender_admin_section_prog ()
 
 <tr valign="top">
 <th scope="row"><label for="convert_bin"><?php printf (__('Location of %s binary:', TEXTDOMAIN), '<code>convert</code>') ?></label></th>
-<td><input name="ScoreRender[CONVERT_BIN]" type="text" id="convert_bin" value="<?php echo $sr_options['CONVERT_BIN']; ?>" size="50" class="regular-text code" /></td>
+<td><input name="ScoreRender[CONVERT_BIN]" type="text" id="convert_bin" value="<?php echo $sr_options['CONVERT_BIN']; ?>" class="regular-text code" /></td>
 </tr>
 
 <tr valign="top">
 <th scope="row"><label for="lilypond_bin"><?php printf (__('Location of %s binary:', TEXTDOMAIN), '<code>lilypond</code>'); ?></label></th>
-<td><input name="ScoreRender[LILYPOND_BIN]" type="text" id="lilypond_bin" value="<?php echo $sr_options['LILYPOND_BIN']; ?>" size="50" class="regular-text code" /></td>
+<td><input name="ScoreRender[LILYPOND_BIN]" type="text" id="lilypond_bin" value="<?php echo $sr_options['LILYPOND_BIN']; ?>" class="regular-text code" /></td>
 </tr>
 
 <tr valign="top">
 <th scope="row"><label for="mup_bin"><?php printf (__('Location of %s binary:', TEXTDOMAIN), '<code>mup</code>'); ?></label></th>
-<td><input name="ScoreRender[MUP_BIN]" type="text" id="mup_bin" value="<?php echo $sr_options['MUP_BIN']; ?>" size="50" class="regular-text code" /></td>
+<td><input name="ScoreRender[MUP_BIN]" type="text" id="mup_bin" value="<?php echo $sr_options['MUP_BIN']; ?>" class="regular-text code" /></td>
 </tr>
 
 <tr valign="top">
 <th scope="row"><label for="mup_magic_file"><?php printf (__('Location of %s magic file:', TEXTDOMAIN), '<code>mup</code>'); ?></label></th>
-<td><input name="ScoreRender[MUP_MAGIC_FILE]" type="text" id="mup_magic_file" value="<?php echo $sr_options['MUP_MAGIC_FILE']; ?>" size="50" class="regular-text code" />
+<td><input name="ScoreRender[MUP_MAGIC_FILE]" type="text" id="mup_magic_file" value="<?php echo $sr_options['MUP_MAGIC_FILE']; ?>" class="regular-text code" />
 <div class="setting-description"><?php printf (__('Leave it empty if you have not <a href="%s">registered</a> Mup. This file must be readable by the user account running web server.', TEXTDOMAIN), 'http://www.arkkra.com/doc/faq.html#payment'); ?></div>
 </td>
 </tr>
 
 <tr valign="top">
 <th scope="row"><label for="abcm2ps_bin"><?php printf (__('Location of %s binary:', TEXTDOMAIN), '<code>abcm2ps</code>'); ?></label></th>
-<td><input name="ScoreRender[ABCM2PS_BIN]" type="text" id="abcm2ps_bin" value="<?php echo $sr_options['ABCM2PS_BIN']; ?>" size="50" class="regular-text code" /></td>
+<td><input name="ScoreRender[ABCM2PS_BIN]" type="text" id="abcm2ps_bin" value="<?php echo $sr_options['ABCM2PS_BIN']; ?>" class="regular-text code" /></td>
 </tr>
 
 <tr valign="top">
 <th scope="row"><label for="pmw_bin"><?php printf (__('Location of %s binary:', TEXTDOMAIN), '<code>pmw</code>'); ?></label></th>
-<td><input name="ScoreRender[PMW_BIN]" type="text" id="pmw_bin" value="<?php echo $sr_options['PMW_BIN']; ?>" size="50" class="regular-text code" /></td>
+<td><input name="ScoreRender[PMW_BIN]" type="text" id="pmw_bin" value="<?php echo $sr_options['PMW_BIN']; ?>" class="regular-text code" /></td>
 </tr>
 
 </table>
@@ -347,7 +362,7 @@ function scorerender_admin_section_image ()
 
 <tr valign="top">
 <th scope="row"><label for="image_max_width"><?php _e('Max image width (pixel):', TEXTDOMAIN) ?></label></th>
-<td><input type="text" name="ScoreRender[IMAGE_MAX_WIDTH]" id="image_max_width" value="<?php echo $sr_options['IMAGE_MAX_WIDTH']; ?>" size="6" class="regular-text" />
+<td><input type="text" name="ScoreRender[IMAGE_MAX_WIDTH]" id="image_max_width" value="<?php echo $sr_options['IMAGE_MAX_WIDTH']; ?>" class="small-text" />
 <div class="setting-description"><?php _e('Note that this value is just an approximation, please allow for &#x00B1;10% difference. Some programs like lilypond would not use the full image width if passage is not long enough.', TEXTDOMAIN) ?></div>
 </td>
 </tr>
@@ -362,7 +377,7 @@ function scorerender_admin_section_image ()
 <tr valign="top">
 <th scope="row"><?php _e('Image post-processing:', TEXTDOMAIN) ?></th>
 <td>
-<fieldset><legend class="hidden"><?php _e('Image post-processing:', TEXTDOMAIN) ?></legend>
+<fieldset><legend class="hidden screen-reader-text"><?php _e('Image post-processing:', TEXTDOMAIN) ?></legend>
 <label for="invert_image"><input type="checkbox" name="ScoreRender[INVERT_IMAGE]" id="invert_image" value="1" <?php checked('1', $sr_options['INVERT_IMAGE']); ?> />
 <?php _e('White colored notes (default is black)', TEXTDOMAIN); ?></label>
 <br />
@@ -394,7 +409,7 @@ function scorerender_admin_section_content ()
 
 <tr valign="top">
 <th scope="row"><label for="content_max_length"><?php _e('Maximum length per fragment:', TEXTDOMAIN) ?></label></th>
-<td><input type="text" name="ScoreRender[CONTENT_MAX_LENGTH]" id="content_max_length" value="<?php echo $sr_options['CONTENT_MAX_LENGTH']; ?>" size="6" class="regular-text" />
+<td><input type="text" name="ScoreRender[CONTENT_MAX_LENGTH]" id="content_max_length" value="<?php echo $sr_options['CONTENT_MAX_LENGTH']; ?>" class="small-text" />
 <span class="setting-description"><?php _e('(0 means unlimited)', TEXTDOMAIN) ?></span>
 </td>
 </tr>
@@ -402,7 +417,7 @@ function scorerender_admin_section_content ()
 <tr valign="top">
 <th scope="row"><?php _e('When rendering failed:', TEXTDOMAIN); ?></th>
 <td>
-<fieldset><legend class="hidden"><?php _e('When rendering failed:', TEXTDOMAIN); ?></legend>
+<fieldset><legend class="hidden screen-reader-text"><?php _e('When rendering failed:', TEXTDOMAIN); ?></legend>
 <label for="on_err_show_message"><input type="radio" name="ScoreRender[ERROR_HANDLING]" id="on_err_show_message" value="1" <?php checked(ON_ERR_SHOW_MESSAGE, $sr_options['ERROR_HANDLING']); ?> />
 <?php _e('Show error message', TEXTDOMAIN) ?></label><br />
 <label for="on_err_show_fragment"><input type="radio" name="ScoreRender[ERROR_HANDLING]" id="on_err_show_fragment" value="2" <?php checked(ON_ERR_SHOW_FRAGMENT, $sr_options['ERROR_HANDLING']); ?> />
@@ -425,7 +440,7 @@ function scorerender_admin_section_content ()
 <tr valign="top">
 <th scope="row"><?php _e('Maximum number of fragment per comment:', TEXTDOMAIN) ?></th>
 <td>
-<label for="fragment_per_comment"><input type="text" name="ScoreRender[FRAGMENT_PER_COMMENT]" id="fragment_per_comment" value="<?php echo $sr_options['FRAGMENT_PER_COMMENT']; ?>" size="6" <?php if (1 != $sr_options['COMMENT_ENABLED']) { echo ' disabled="disabled"'; } ?> class="regular-text" /></label>
+<label for="fragment_per_comment"><input type="text" name="ScoreRender[FRAGMENT_PER_COMMENT]" id="fragment_per_comment" value="<?php echo $sr_options['FRAGMENT_PER_COMMENT']; ?>" <?php if (1 != $sr_options['COMMENT_ENABLED']) { echo ' disabled="disabled"'; } ?> class="small-text" /></label>
 <span class="setting-description"><?php _e('(0 means unlimited)', TEXTDOMAIN) ?><br /><?php printf (__('If you don&#8217;t want comment rendering, turn off &#8216;<i>%s</i>&#8217; checkbox above instead. This option does not affect posts and pages.', TEXTDOMAIN), __('Enable rendering for comments', TEXTDOMAIN)); ?></span>
 </td>
 </tr>
@@ -514,23 +529,12 @@ function scorerender_admin_options ()
 	<?php wp_nonce_field ('scorerender-update-options') ?>
 	<h2><?php _e('ScoreRender options', TEXTDOMAIN) ?></h2>
 
-	<p><?php _e('ScoreRender renders inline music fragments inside blog post and/or comment as images. Currently it supports the following notations (each notation name is followed by its starting and ending tag):', TEXTDOMAIN); ?></p>
+	<p><?php _e('The following notations are supported by ScoreRender, along with starting and ending tag after each notation name. Each music fragment must be enclosed by corresponding pair of tags.', TEXTDOMAIN); ?></p>
 	<ul>
-		<li><a target="_blank" href="http://www.lilypond.org/">Lilypond</a>
-		(<?php printf ('<code>%s</code>, <code>%s</code>', $notations['lilypond']['starttag'], $notations['lilypond']['endtag']); ?>)</li>
-		<li><a target="_blank" href="http://www.arkkra.com/">Mup</a>
-		(<?php printf ('<code>%s</code>, <code>%s</code>', $notations['mup']['starttag'], $notations['mup']['endtag']); ?>)
-		<?php printf ('Used by Mup itself and %s', '<a target="_blank" href="http://noteedit.berlios.de/">Noteedit</a>'); ?></li>
-		<li><a target="_blank" href="http://www.informatik.tu-darmstadt.de/AFS/GUIDO/">GUIDO</a>
-		(<?php printf ('<code>%s</code>, <code>%s</code>', $notations['guido']['starttag'], $notations['guido']['endtag']); ?>)</li>
-		<li><a target="_blank" href="http://abcnotation.org.uk/">ABC</a>
-		(<?php printf ('<code>%s</code>, <code>%s</code>', $notations['abc']['starttag'], $notations['abc']['endtag']); ?>)
-		<?php printf ('Used by various programs like %s, %s or %s',
-			'<a target="_blank" href="http://www.ihp-ffo.de/~msm/">abc2ps</a>',
-			'<a target="_blank" href="http://moinejf.free.fr/">abcm2ps</a>',
-			'<a target="_blank" href="http://trillian.mit.edu/~jc/music/abc/src/">jcabc2ps</a>'); ?></li>
-		<li><a target="_blank" href="http://www.quercite.com/pmw.html">Philip's Music Writer</a>
-		(<?php printf ('<code>%s</code>, <code>%s</code>', $notations['pmw']['starttag'], $notations['pmw']['endtag']); ?>)</li>
+<?php	foreach ($notations as $tag => $notation_data) : ?>
+	<li><a target="_blank" href="<?php echo $notation_data['url']; ?>"><?php echo $notation_data['name']; ?></a>
+	(<code><?php echo $notation_data['starttag']; ?></code>, <code><?php echo $notation_data['endtag']; ?></code>)</li>
+<?php	endforeach; ?>
 	</ul>
 
 <?php
@@ -566,7 +570,7 @@ function scorerender_admin_options ()
 function scorerender_admin_menu ()
 {
 	$plugin_page = add_options_page (__('ScoreRender options', TEXTDOMAIN), 'ScoreRender', 9, __FILE__, 'scorerender_admin_options');
-	add_filter('admin_head' . $plugin_page, 'scorerender_admin_add_js');
+	add_filter('admin_head-' . $plugin_page, 'scorerender_admin_add_js');
 }
 
 
